add expired_at for servers and worker for fetching this servers
